<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherReminder</string>
    <string name="add_alarm_button_text">新增</string>
    <string name="add_button_text">新增条件</string>
    <string name="del_button_text">删除条件</string>
    <string name="no_remind">目前没有提醒</string>
    <string name="title_activity_add_alarm">新建提醒</string>
    <string name="alarm_name">描述</string>
    <string name="action_settings">设置</string>
    <string name="weather_pager_title">天气</string>
    <string name="clothes_pager_title">指数</string>
    <string name="reminder_pager_title">提醒</string>
    <string name="settings_title">设置</string>
    <string name="connection_error">连接失败</string>
    <string name="day_title">今日白天</string>
    <string name="night_title">今日夜晚</string>
    <string name="alarm_name_hint">请输入对该提醒的描述</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="delete_alarm">Delete</string>
    
    <string name="error_fetch_text">目前无法获取信息</string>

    <string name="select_text">请选择一项</string>
    <string name="preference_city_title">显示天气城市</string>
    <string name="preference_city_default">nj</string>
    <string name="preference_refresh_interval_title">天气刷新间隔</string>
    <string name="preference_refresh_interval_default">10800000</string>
    <string name="refresh_button_text">Refresh</string>

    <string name="notification_content_title">你有新的天气提醒</string>
    <string name="notification_content_text">共{v}个提醒</string>
    <string name="big_content_title">你有新的天气提醒</string>
    <string name="about_text">关于</string>
    <string name="version_text">版本</string>
    <string name="version_code">0.1</string>
    <string name="author_content">计算机系 欧北辰</string>
    <string name="author_text">作者</string>
    <string name="weather_image_des">天气</string>
</resources>
