<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListPreference
        android:dialogTitle="@string/select_text"
        android:entries="@array/cities"
        android:entryValues="@array/cities_value"
        android:defaultValue="@string/preference_city_default"
        android:key="preference_city"
        android:title="@string/preference_city_title" />
    <ListPreference
        android:dialogTitle="@string/select_text"
        android:entries="@array/refresh_interval"
        android:entryValues="@array/refresh_interval_value"
        android:defaultValue="@string/preference_refresh_interval_default"
        android:key="preference_refresh_interval"
        android:title="@string/preference_refresh_interval_title" />
    <PreferenceCategory
        android:title="关于">
        <Preference
            android:summary="0.1"
            android:title="版本"
            android:persistent="false"/>
        <Preference
            android:summary="计算机系 欧北辰"
            android:title="作者"
            android:persistent="false"/>
    </PreferenceCategory>
</PreferenceScreen>